# joshsw.dev

./: .dockerignore  .firebaserc  .gitignore  .gitmodules  README.md  __scratch__.py  main.py  package-lock.json  package.json  pyproject.toml  pyscript  requirements.txt  scratch.ipynb
.github/workflows/: azure-static-web-apps-brave-cliff-0fa190610.yml  azure-static-web-apps-icy-grass-0c6846910.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  main_jdev.yml
certs/: dev-cert.pem  dev-key.pem
docker/: Dockerfile  docker-compose.yaml  start.sh
old/: bio.html
public/: index.css  index.css.map  index.html  robots.txt
routers/: nav.py
sass/: about_page.scss  base.scss  dock.scss  i.sass  index.sass  index.scss  project_page.scss
scripts/: docker.py
senza/: dom_router.py  releases.txt
senza/components/: __init__.py  abase.py  img.py  svg.py
sigil_script/: app.py  context.py  dom_router.py
src/: App.jsx  index.js
src/Style/: About.css  Navbar.css  index.css  projects.css
src/components/: About.jsx  Main.jsx  Nav.jsx  Projects.jsx  index.js
src/components/Style/: About.css  index.css
utils/: __init__.py  bootstrap.py  sync_pyodide.py  sync_submodules.py
vars/: svg_list.py
web/: app.py  context.py  pyscript.toml  queries.py  repl.py
web/config/: config.toml
web/elements/: dock.py  dock_button.py  link_icon.py  sidebar.py
web/vars/: static_assets.py  svg_list.py
web/views/: about_page.py  dp_life_page.py  project_page.py  repl_page.py
