[tool.poetry]
name = "joshsw-dev"
version = "0.1.0"
description = "personal site"
authors = ["josh wilkinson <joshswilkinson@outlook.com>"]
license = "proprietary"
readme = "README.md"
packages = [{ include = "../joshsw.dev" }, { include = "senza" }]

[tool.poetry.dependencies]
python = ">=3.9.20"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
orjson = "^3.9.15"
async-lru = "^2.0.4"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = 'main:server.run'
docker_build = 'scripts.docker:build'
compose_up = 'scripts.docker:compose_up'
compile_sass = 'scripts.compile_sass:compile_sass'
sync_pyodide = 'utils.sync_pyodide:sync_pyodide'
sync_submodules = 'utils.sync_submodules:sync_submodules'